--- a/components/footer.html
+++ b/components/footer.html
@@ -34,7 +34,7 @@
             <p>Categories</p>
             <div>Mais Comprados</div>
             <div>Ofertas Relampago</div>
-            <div>Concerto</div>
+            <div>Conserto</div>
             <div>Reforma</div>
             <div>Acessórios</div>
             <div>Usados</div>
