--- a/components/header.html
+++ b/components/header.html
@@ -3,8 +3,7 @@
     <div class="buttonHeader">
         <button type="submit" onclick="openURL('index.html')">Home</button>
         <button type="submit" onclick="openURL('contato.html')">Contato</button>
-        <button type="submit">Sobre</button>
-        <button type="submit">Nos Siga</button>
+        <button type="submit" onclick="scrollToBottom()">Sobre</button>
     </div>
     <form class="formHeader">
         <input class="searchInput" type="text" placeholder="Procure um produto..." required>
@@ -27,10 +26,13 @@
             <span class="material-symbols-outlined">flash_on</span><p>Ofertas Relampago</p>
         </div>
         <div>
-            <span class="material-symbols-outlined">build</span><p>Concerto</p>
+            <span class="material-symbols-outlined">build</span><p>Conserto</p>
         </div>
         <div>
             <span class="material-symbols-outlined">handyman</span><p>Reforma</p>
+        </div>
+        <div>
+            <span class="material-symbols-outlined">sync_alt</span><p>Aluguel</p>
         </div>
         <div>
             <span class="material-symbols-outlined">deployed_code</span><p>Acessórios</p>
@@ -39,7 +41,7 @@
             <span class="material-symbols-outlined">handshake</span><p>Usados</p>
         </div>
         <div>
-            <span class="material-symbols-outlined">local_shipping</span><p>Serviço de Busca e Entrega</p>
+            <span class="material-symbols-outlined">local_shipping</span><p>Busca e Entrega</p>
         </div>
     </div>
 </header>
