--- a/style/login.css
+++ b/style/login.css
@@ -1,12 +1,12 @@
 .login-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 500px rgba(0, 0, 0, 0.1);
-    margin: 20px auto;
-    max-width: 400px;
-    text-align: center;
-  }
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 500px rgba(0, 0, 0, 0.1);
+  margin: 120px auto;
+  max-width: 400px;
+  text-align: center;
+}
 
 h2 {
   text-align: center;
@@ -31,12 +31,22 @@ h2 {
 }
 
 .btn-entrar-login {
-  width: calc(100% - 22px);
+  width: 100%;
+  margin-top: 20px;
   padding: 10px;
   border: none;
   border-radius: 5px;
   background-color: #ff681f;
   color: #fff;
   cursor: pointer;
+  font-weight: 600;
   transition: background-color 0.3s ease;
+}
+
+.btn-entrar-login:hover {
+  background-color: #30A9DF;
+}
+
+.btn-entrar-login:active {
+  background-color: #30A9DF;
 }
