--- a/src/components/banners/Banners.css
+++ b/src/components/banners/Banners.css
@@ -10,7 +10,7 @@
     flex-grow: 1;
     height: 400px;
     max-width: 1340px;
-    background: url(../assets/img/micro1.png);
+    background: url(img/micro1.png);
     background-size: 60%, auto;
     background-position: right;
     background-repeat: no-repeat;
@@ -18,17 +18,6 @@
     margin: 30px 40px 0 40px;
     padding: 70px 40px 50px 40px;
     border-radius: 10px;
-}
-
-#bannRefColor {
-    justify-content: center;
-    background: url(../assets/img/bannerReforma.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-#bannSamColor{
-    background-color: black;
 }
 
 .onleftBanner {
@@ -67,15 +56,4 @@
 
 .btnBanner p {
     margin: 0;
-}
-
-#btnBannerRef {
-    display: flex;
-    justify-content: center;
-    margin-top: 350px;
-    gap: 28px;
-}
-
-#btnBannerRef p {
-    margin-left: 5px;
 }
