--- a/components/footer.html
+++ b/components/footer.html
@@ -75,7 +75,7 @@
                 <button class="inputButtonFooter" type="submit">Inscreva-se</button>
             </form>
             <section class="followUsFooter">
-                <p>Nos Siga</p>
+                <p>Siga-nos</p>
                 <div>
                     <i class="fa-brands fa-facebook fa-2xl" onclick="openLink('https://www.facebook.com')"></i>
                     <i class="fa-brands fa-twitter fa-2xl" onclick="openLink('https://twitter.com')"></i>
