--- a/components/footer.html
+++ b/components/footer.html
@@ -52,7 +52,7 @@
         </div>
         <div class="columnFooter">
             <p>Links Úteis</p>
-            <div>Sobre</div>
+            <div onclick="openURL('sobre.html')">Sobre</div>
             <div onclick="openURL('contato.html')">Contato</div>
             <div>Central de Atendimento</div>
             <div>Carreira</div>
