--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,7 @@
     <div class="buttonHeader">
         <button type="submit" onclick="openURL('index.html')">Home</button>
         <button type="submit" onclick="openURL('contato.html')">Contato</button>
-        <button type="submit" onclick="scrollToBottom()">Sobre</button>
+        <button type="submit" onclick="openURL('sobre.html')">Sobre</button>
     </div>
     <form class="formHeader">
         <input class="searchInput" type="text" placeholder="Procure um produto..." required>
