--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,8 @@
 <header class="mainHeader">
-    <img id="iconHeader" src="/assets/img/csmicropng.png" onclick="openURL('index.html')">
+    <div id="alignLogo">
+        <img id="iconHeader" src="/assets/img/csmicropng.png" onclick="openURL('index.html')">
+        <p id="labelLogo">CASA DO MICROONDAS</p>
+    </div>
     <div class="buttonHeader">
         <button type="submit" onclick="openURL('index.html')">Home</button>
         <button type="submit" onclick="openURL('contato.html')">Contato</button>
