--- a/style/index.css
+++ b/style/index.css
@@ -22,6 +22,7 @@
     height: 400px;
     font-size: 20px;
     transition: 0.2s ease;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .container:hover {
