--- a/style/main.css
+++ b/style/main.css
@@ -19,9 +19,20 @@ body {
     background-color: #ff681f;
 }
 
+#alignLogo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #iconHeader {
-    height: 60px;
+    height: 55px;
     cursor: pointer;
+}
+
+#labelLogo {
+    font-size: 11px;
+    margin: 0;
 }
 
 .buttonHeader {
