--- a/components/footer.html
+++ b/components/footer.html
@@ -90,7 +90,7 @@
             © Casa do Microondas – All Rights Reserved
         </div>
         <div class="iconFooter">
-            <img id="iconHeader" src="assets/img/csmicropng.png" onclick="openURL()">
+            <img id="iconHeader" src="assets/img/csmicropng.png" alt="logo" onclick="openURL('index.html')">
         </div>
         <div class="currency">
             <select name="coin" id="coinInput">
