--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <header class="mainHeader">
     <div id="alignLogo">
-        <img id="iconHeader" src="/assets/img/csmicropng.png" onclick="openURL('index.html')">
+        <img id="iconHeader" src="/assets/img/csmicropng.png" alt="logo" onclick="openURL('index.html')">
         <p id="labelLogo">CASA DO MICROONDAS</p>
     </div>
     <div class="buttonHeader">
