--- a/src/components/banners/Banners.css
+++ b/src/components/banners/Banners.css
@@ -15,7 +15,7 @@
     background-position: right;
     background-repeat: no-repeat;
     color: white;
-    margin: 30px 40px 0 40px;
+    margin: 30px 40px;
     padding: 70px 40px 50px 40px;
     border-radius: 10px;
 }
