--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -92,7 +92,7 @@
     padding: 10px;
 }
 
-#iconRedeSobre {
+#iconSocial {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 20px;
@@ -104,7 +104,7 @@
     font-size: 20px;
 }
 
-#iconRedeSobre i {
+#iconSocial i {
     cursor: pointer;
     margin-top: 30px;
     margin-right: 10px;
@@ -121,6 +121,22 @@
 .copyright {
     font-size: 15px;
     font-weight: 500;
+}
+
+#alignLogo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+#iconFooter {
+    height: 55px;
+}
+
+#labelLogo {
+    font-size: 11px;
+    margin: 0;
 }
 
 .currency {
