--- a/src/components/styles/SobreContent.css
+++ b/src/components/styles/SobreContent.css
@@ -14,7 +14,7 @@ p {
 
 .contentSobre {
     margin: 60px 60px 100px 60px;
-    padding: 40px;
+    padding: 40px 80px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 }
@@ -54,6 +54,20 @@ p {
     margin-top: 40px;
 }
 
+#alignMapa {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+iframe {
+    width:425px; 
+    height: 450;
+    border: 0; 
+    border-radius: 10px;
+}
+
 .linha1, .linha2 {
     display: flex;
+    justify-content: space-around;
 }
