--- a/src/components/banners/styles/BanMarcas.css
+++ b/src/components/banners/styles/BanMarcas.css
@@ -21,7 +21,8 @@
 .textBanMarcas {
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
+    margin-left: 30px;
+    margin-right: 50px;
     gap: 30px;
 }
 
@@ -55,7 +56,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 50px;
+    margin-right: 30px;
     gap: 80px;
 }
 
@@ -68,16 +69,22 @@
 .logosBanMarcas div {
     display: flex;
     justify-content: center;
-    width: 150px;
-    height: 80px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    width: 230px;
+    height: 120px;
     border-radius: 10px;
     gap: 10px;
+    transition: 0.3s ease;
+}
+
+.logosBanMarcas div:hover {
+    transform: translateY(-3px);
 }
 
 .logosBanMarcas img {
     border-radius: 10px;
     width: auto;
-    height: 80px;
+    height: 100%;
 }
 
 #brasIcon {
@@ -99,7 +106,7 @@
 }
 
 #philcoIcon {
-    background-color: black;
+    background-color: #101010;
 }
 
 #samIcon {
