add comentarios de explicação

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -111,7 +111,7 @@
 
 .sndNav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-grow: 1;
 }
 
