--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -79,7 +79,7 @@
 
 .formFooter {
     display: flex;
-    margin-top: 30px;
+    margin: 15px 0;
     height: 50px;
 }
 
@@ -164,7 +164,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 310px;
+    width: 320px;
 }
 
 #coinInput {
