mensagem na acessorios

--- a/src/components/banners/styles/BanMarcas.css
+++ b/src/components/banners/styles/BanMarcas.css
@@ -67,6 +67,7 @@
 }
 
 .logosBanMarcas div {
+    cursor: pointer;
     display: flex;
     justify-content: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
