--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -159,19 +159,15 @@
     font-size: 11px;
     margin: 0;
 }
-
-.currency {
+#alignLinkedin {
+    cursor: pointer;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    width: 320px;
+    gap: 20px;
+    margin-left: 60px;
 }
 
-#coinInput {
-    font-family: "DM_sans";
+#labelLinkedin {
     font-weight: 500;
-    padding: 10px 20px;
-    border: 1px solid lightgrey;
-    border-radius: 5px 0 0 5px;
-    outline: none;
 }
