--- a/src/components/styles/SobreContent.css
+++ b/src/components/styles/SobreContent.css
@@ -50,6 +50,10 @@ p {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 }
 
+.mapaSobre {
+    display: flex;
+}
+
 #subTitleSobre {
     margin-top: 40px;
 }
