--- a/src/components/usado/UsadoContent.css
+++ b/src/components/usado/UsadoContent.css
@@ -5,11 +5,11 @@
 
 .usadoContent{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-grow: 1;
     max-width: 1400px;
 }
 
-.usadoFiltro {
+/* .usadoFiltro {
     margin: 30px 0;
-}
+} */
