--- a/src/components/styles/Endereco.css
+++ b/src/components/styles/Endereco.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    justify-content: space-between;
     margin-right: 30px;
 }
 
@@ -45,15 +46,10 @@
     text-align: center;
     font-size: 25px;
     color: #ff681f;
-    margin-bottom: 20px;
 }
 
 #endereco {
     font-size: 17px;
-}
-
-#numEndereco, .btnEndereco {
-    margin-top: auto;
 }
 
 #numEndereco {
